# stinger

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  ReleaseNotes.md  SOURCEME.sh  main.cpp  stinger.cfg  wscript
lib/: CMakeLists.txt
lib/compat/: CMakeLists.txt
lib/compat/inc/: luc.h
lib/compat/src/: luc.cc
lib/fmemopen/: CMakeLists.txt
lib/fmemopen/src/: fmemopen.c
lib/int_hm_seq/: CMakeLists.txt
lib/int_hm_seq/inc/: int_hm_seq.h
lib/int_hm_seq/src/: int-hm-seq.c
lib/int_ht_seq/: CMakeLists.txt
lib/int_ht_seq/inc/: int_ht_seq.h
lib/int_ht_seq/src/: int-ht-seq.c
lib/intvec/: CMakeLists.txt
lib/intvec/src/: int64vector.c
lib/kv_store/: CMakeLists.txt
lib/kv_store/inc/: kv_store.h
lib/kv_store/src/: kv_store.c
lib/mongo_c_driver/: CMakeLists.txt
lib/mongo_c_driver/src/: bcon.c  mongo.c
lib/mongoose/: CMakeLists.txt
lib/mongoose/src/: mongoose.c
lib/pugixml/: CMakeLists.txt  readme.txt
lib/rapidjson/: CMakeLists.txt
lib/rapidjson/include/: reader.h
lib/sqlite/: CMakeLists.txt
lib/stinger_alg/: CMakeLists.txt
lib/stinger_alg/inc/: adamic_adar.h  betweenness.h  bfs.h  clustering.h  community_on_demand.h  diameter.h  graph_partition.h  hits_centrality.h  independent_sets.h  kcore.h  modularity.h  pagerank.h  pagerank_updating.h  random.h  shortest_paths.h  spmv_spmspv.h  static_components.h  streaming_connected_components.h  weakly_connected_components.h
lib/stinger_alg/src/: adamic_adar.c  betweenness.c  bfs.c  clustering.c  community_on_demand.c  diameter.cpp  graph_partition.c  hits_centrality.c  independent_sets.c  kcore.c  modularity.c  pagerank.c  pagerank_updating.c  rmat.c  shortest_paths.cpp  spmv_spmspv.c  static_components.c  streaming_connected_components.c  weakly_connected_components.c
lib/stinger_core/: CMakeLists.txt
lib/stinger_core/inc/: alternative_omp_macros.h  formatting.h  stinger.h  stinger_atomics.h  stinger_batch_insert.h  stinger_defs.h  stinger_defs.h.in  stinger_deprecated.h  stinger_error.h  stinger_internal.h  stinger_names.h  stinger_names.h.in  stinger_physmap.h  stinger_return.h  stinger_shared.h  stinger_traversal.h  stinger_vertex.h  x86_full_empty.h  xmalloc.h
lib/stinger_core/src/: core_util.c  stinger.c  stinger_batch_insert.cpp  stinger_deprecated.c  stinger_names.c  stinger_names_sqlite.c  stinger_physmap.c  stinger_shared.c  stinger_vertex.c  x86_full_empty.c  xmalloc.c
lib/stinger_net/: CMakeLists.txt
lib/stinger_net/inc/: send_rcv.h  stinger_alg.h  stinger_alg_state.h  stinger_local_state_c.h  stinger_mon_c.h  stinger_server_state.h  stinger_stream.h  stinger_stream_state.h
lib/stinger_net/proto/: stinger-alg.proto  stinger-batch.proto  stinger-connect.proto  stinger-monitor.proto
lib/stinger_net/src/: mon_handling.cpp  send_rcv.cpp  stinger_alg.cpp  stinger_alg_state_c.cpp  stinger_local_state_c.cpp  stinger_mon.cpp  stinger_mon_state.cpp  stinger_server_state.cpp  stinger_stream.cpp
lib/stinger_utils/: CMakeLists.txt
lib/stinger_utils/inc/: csv.h  graph_construct.h  histogram.h  json_support.h  metisish_support.h  stinger_la.h  stinger_sockets.h  stinger_test.h  stinger_utils.h  timer.h  xml_support.h
lib/stinger_utils/src/: csv.c  dimacs_support.c  graph_construct.c  histogram.c  json_graph.cpp  json_support.c  metisish_support.c  stinger_extract.c  stinger_la.c  stinger_sockets.c  stinger_utils.c  timer.c  xml_support.c
lib/string/: CMakeLists.txt
lib/vtx_set/: CMakeLists.txt
lib/vtx_set/inc/: vtx_set.h
lib/vtx_set/src/: vtx_set.c
src/clients/algorithms/: CMakeLists.txt
src/clients/algorithms/pagerank_updating/: CMakeLists.txt
src/clients/algorithms/simple_communities/: CMakeLists.txt
src/clients/algorithms/spmspv_test/: CMakeLists.txt
src/clients/streams/: CMakeLists.txt
src/clients/tools/: CMakeLists.txt
src/clients/tools/json_rpc_server/: CMakeLists.txt
src/clients/tools/sql_client/: STINGER_SQL.txt
src/clients/tools/vquery/: _stinger.c
src/lib/: CMakeLists.txt
src/lib/compat/inc/: getMemorySize.h  luc.h
src/lib/compat/src/: getMemorySize.c
src/lib/fmemopen/: Makefile
src/lib/kv_store/: Makefile
src/lib/tclap/: Makefile.in  aclocal.m4  configure
src/lib/vtx_set/: Makefile
src/server/: CMakeLists.txt
src/server/inc/: server.h
src/server/src/: alg_handling.cpp  batch.cpp  batch_server.cpp  server.cpp
src/standalone/: CMakeLists.txt
src/standalone/breadth_first_search/: bfs.h
src/standalone/community_reagglomeration/: community-update.c  main.c  xmt-luc.cc  xmt-luc.h
src/standalone/connected_components/: connected-comp.c  connected-comp.h
src/standalone/matvec/: main.c
src/standalone/rmat_graph_generator/: rmatter.c
src/standalone/streaming_clustering_coefficients/: main.c
src/standalone/streaming_connected_components/: connected-comp.c
src/standalone/streaming_connected_components_hipc/: main.c
src/tests/: CMakeLists.txt
src/tests/adamic_adar_test/: adamic_adar_test.cpp  adamic_adar_test.h
src/tests/betweenness_test/: betweenness_test.c  betweenness_test.cpp  betweenness_test.h
src/tests/client_server_test/: client_server_test.sh
src/tests/diameter_test/: diameter_test.cpp  diameter_test.h
src/tests/hits_test/: hits_test.cpp  hits_test.h
src/tests/independent_sets_test/: independent_sets_test.cpp  independent_sets_test.h
src/tests/names_test/: stinger_names_test.c  stinger_names_test.cpp  stinger_names_test.h
src/tests/pagerank_test/: directed_princeton.cpp  pagerank_test.c  pagerank_test.cpp  pagerank_test.h  undirected_princeton.cpp
src/tests/shortest_paths/: shortest_paths_test.cpp  shortest_paths_test.h
src/tests/stinger_batch_test/: stinger_batch_test.cpp  stinger_batch_test.h
src/tests/stinger_core_test/: stinger_core_test.cpp  stinger_core_test.h
src/tests/stinger_physmap_test/: stinger_physmap_test.cpp  stinger_physmap_test.h
src/tests/stinger_traversal_test/: non_read_only_traversal.cpp  read_only_traversal.cpp  stinger_traversal_test.cpp  stinger_traversal_test.h
src/tests/streaming_connected_components_test/: scc_test.cpp  scc_test.h
(+305 files in other folders)
