add_subdirectory(compat)
add_subdirectory(fmemopen)
add_subdirectory(int_hm_seq)
add_subdirectory(int_ht_seq)
add_subdirectory(intvec)
add_subdirectory(kv_store)
add_subdirectory(mongo_c_driver)
add_subdirectory(mongoose)
add_subdirectory(pugixml)
add_subdirectory(rapidjson)
add_subdirectory(sqlite)
add_subdirectory(stinger_core)
add_subdirectory(stinger_net)
add_subdirectory(stinger_alg)
add_subdirectory(stinger_utils)
add_subdirectory(string)
add_subdirectory(vtx_set)
